--- a/Model_training.ipynb
+++ b/Model_training.ipynb
@@ -303,10 +303,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train=pd.read_csv('x_train.csv').squeeze()\n",
-    "y_train=pd.read_csv('y_train.csv').squeeze()\n",
-    "x_test=pd.read_csv('x_test.csv').squeeze()\n",
-    "y_test=pd.read_csv('y_test.csv').squeeze()"
+    "# x_train=pd.read_csv('x_train.csv').squeeze()\n",
+    "# y_train=pd.read_csv('y_train.csv').squeeze()\n",
+    "# x_test=pd.read_csv('x_test.csv').squeeze()\n",
+    "# y_test=pd.read_csv('y_test.csv').squeeze()"
    ]
   },
   {
